--- a/themes/autumn/layout/_widget/about.ejs
+++ b/themes/autumn/layout/_widget/about.ejs
@@ -1,6 +1,6 @@
 <% if (theme.widgets.about) { %>
 <h2>About Me</h2>
-<img alt="my photo" width="80%" src="/img/selfie.jpg">
+<img alt="my photo" width="80%" src="/img/selfie3.jpg">
 <div class="about">
   Liu, An-Chi 劉安齊<br>
   Software Engineer<br>
