--- a/themes/autumn/source/css/_partial/font.styl
+++ b/themes/autumn/source/css/_partial/font.styl
@@ -1,4 +1,8 @@
 @font-face
+  font-family: BLOG;
+  src: url('../font/BLOG.woff')
+
+@font-face
   font-family: Lora;
   src: url('../font/Lora-Regular.ttf'), url('../font/Lora-Regular.eot')
 
