--- a/themes/autumn/source/css/_partial/header.styl
+++ b/themes/autumn/source/css/_partial/header.styl
@@ -7,14 +7,14 @@
     a
       color:#f78769
       text-decoration: none
-      font: 700 3rem Lora-Bold
+      font: 700 3rem BLOG
       transition: .3s
       &:hover
         color: #bbb
     
   .desc
       margin:.5em 0 .25em
-      font: 18px Lora
+      font: 18px BLOG
       color: #bbb
 
   .links 
