deploy: 4c32e2f38e77f32e11774578559490cc58c1df55

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 @font-face {
+  font-family: BLOG;
+  src: url("../font/BLOG.woff");
+}
+@font-face {
   font-family: Lora;
   src: url("../font/Lora-Regular.ttf"), url("../font/Lora-Regular.eot");
 }
@@ -35,7 +39,7 @@ code {
 .header .title a {
   color: #f78769;
   text-decoration: none;
-  font: 700 3rem Lora-Bold;
+  font: 700 3rem BLOG;
   transition: 0.3s;
 }
 .header .title a:hover {
@@ -43,7 +47,7 @@ code {
 }
 .header .desc {
   margin: 0.5em 0 0.25em;
-  font: 18px Lora;
+  font: 18px BLOG;
   color: #bbb;
 }
 .header .links {
