--- a/themes/autumn/layout/_partial/head.ejs
+++ b/themes/autumn/layout/_partial/head.ejs
@@ -66,7 +66,7 @@
             })
         </script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-84804118-3"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-MGLC34ST00"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
 
@@ -75,7 +75,7 @@
             }
             gtag('js', new Date());
 
-            gtag('config', 'UA-84804118-3');
+            gtag('config', 'G-MGLC34ST00');
         </script>
         <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-AMS-MML_HTMLorMML" async>
@@ -94,7 +94,5 @@
             }
         });
     </script>
-    <link href="https://unpkg.com/octomments/build/ocs-ui.min.css" rel="stylesheet">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6206289145662773"
-     crossorigin="anonymous"></script>
+
 </head>
