--- a/themes/autumn/layout/post.ejs
+++ b/themes/autumn/layout/post.ejs
@@ -25,7 +25,7 @@
     <% if (page.tags){%>
     <div class="post-tag">
         tags:&nbsp;
-        <% page.tags.each(function (tag) { %>
+        <% page.tags.forEach(function (tag) { %>
             <a href="<%- url_for(tag.path) %>">
                 <%= tag.name %>
             </a>,&nbsp;
