--- a/themes/autumn/layout/layout.ejs
+++ b/themes/autumn/layout/layout.ejs
@@ -13,6 +13,9 @@
             <section class="aside-section">
                 <%- partial('_widget/about') %>
             </section>
+            <section class="aside-section">
+                <%- partial('_widget/newbook') %>
+            </section>
             <% if (page.content){%>
                 <section class="aside-section">
                     <%- partial('_widget/toc') %>
