add new book ad

--- a/themes/autumn/layout/post.ejs
+++ b/themes/autumn/layout/post.ejs
@@ -19,6 +19,7 @@
             <%= config.author %>
         </li>
     </ul>
+    <a href="/books/beyond-just-coding-book.html" role="advertisement"><img src="/img/new-book-ad.png" alt="《程式設計原來不只有寫 CODE！》新書橫幅廣告" class="ad-banner-image"></a>
     <div class="post-content">
         <%- page.content %>
     </div>
