--- a/themes/autumn/source/css/_partial/post.styl
+++ b/themes/autumn/source/css/_partial/post.styl
@@ -166,3 +166,8 @@ blockquote
 .hr-color
     border: 3px dashed #bbb;
     border-radius: 2px;
+
+.ad-banner-image
+    padding: 0 5%
+    width: 90%
+    max-width: 768px
