--- a/themes/autumn/layout/layout.ejs
+++ b/themes/autumn/layout/layout.ejs
@@ -13,7 +13,7 @@
             <section class="aside-section">
                 <%- partial('_widget/about') %>
             </section>
-            <section class="aside-section" role="advertisement">
+            <section class="aside-section">
                 <%- partial('_widget/newbook') %>
             </section>
             <% if (page.content){%>
