--- a/themes/autumn/source/css/_partial/post.styl
+++ b/themes/autumn/source/css/_partial/post.styl
@@ -167,7 +167,7 @@ blockquote
     border: 3px dashed #bbb;
     border-radius: 2px;
 
-.ad-banner-image
+.new-book-banner-image
     padding: 0 5%
     width: 90%
     max-width: 768px
