--- a/themes/autumn/layout/_partial/header.ejs
+++ b/themes/autumn/layout/_partial/header.ejs
@@ -28,6 +28,11 @@
                 </a>
             </li>
             <% } %>
+            <li>
+                <a href="#" id="theme-toggle" onclick="toggleDarkMode()" title="Toggle dark mode">
+                    🌙
+                </a>
+            </li>
         </ul>
     </div>
 </header>
