--- a/themes/autumn/source/css/_widget/aside.styl
+++ b/themes/autumn/source/css/_widget/aside.styl
@@ -19,7 +19,7 @@
     content: ' '
     height: 24px
     width: 2px
-    background-color: #333
+    background-color: var(--text-dark)
   &:before 
     transform: rotate(45deg)
   &:after
@@ -30,7 +30,7 @@
   h2
     font: 1.25em/1.2 Lora
     margin: .67em 0
-    color: #777
+    color: var(--text-color)
     &:before
       content: ''
       display: inline-block
@@ -47,20 +47,20 @@
     margin: 0
     padding: 0
     li
-      border-top: 1px dashed #ddd
+      border-top: 1px dashed var(--border-color)
       margin-top: .6em
       padding-top: .6em
       a
-        color: #f78769
+        color: var(--accent-color)
         text-decoration: none
         font: 14px Lato
         transition: .3s
         &:hover
-          color: #ddd
+          color: var(--accent-hover)
       span
         font: 12px Lato
         padding-left: 5px
-        color: #f78769
+        color: var(--accent-color)
             
 .aside-section.tag
   li
@@ -68,7 +68,7 @@
     border: none
     margin: 0 10px 0 0
     a
-      border: 1px dashed #ddd
+      border: 1px dashed var(--border-color)
       padding: 4px
 
 @media screen and (max-width: 1015px) 
@@ -82,8 +82,8 @@
     width: 28%
     height: 100vh
     padding: 3em 20px 0
-    background-color: #fff
-    box-shadow: 1px 1px 3px #ddd
+    background-color: var(--container-bg)
+    box-shadow: 1px 1px 3px var(--border-color)
     .close
       display: block
 
@@ -108,13 +108,13 @@
   color: #777;
 
 ::placeholder {
-  color: #bababa;
+  color: var(--text-light);
   font-style: italic;
 }
 
 .toc-container
-  background: #f9f9f9;
-  border: 1px #aaa;
+  background: var(--blockquote-bg);
+  border: 1px var(--text-light);
   display: table;
   font-size: 80%;
   padding: 5px;
