fix "more-link" class

--- a/themes/autumn/source/css/_partial/post.styl
+++ b/themes/autumn/source/css/_partial/post.styl
@@ -84,7 +84,7 @@
     margin-bottom: 1.5em
     text-align: left
     a.more-link
-      box-shadow: inset 0 -80px 80px -5px rgba(255,255,255,.75)
+      box-shadow: inset 0 -80px 80px -5px var(--container-bg)
       color: var(--accent-color)
       font-family: Lora-Bold
       font-weight: 700
