--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ code {
   text-align: left;
 }
 .post .post-content a.more-link {
-  box-shadow: inset 0 -80px 80px -5px rgba(255,255,255,0.75);
+  box-shadow: inset 0 -80px 80px -5px var(--container-bg);
   color: var(--accent-color);
   font-family: Lora-Bold;
   font-weight: 700;
