--- a/themes/autumn/layout/_partial/head.ejs
+++ b/themes/autumn/layout/_partial/head.ejs
@@ -6,6 +6,14 @@
     <meta name="description"
         content="<% if (page.des) {%><%= page.des %><% } else if (page.title) {%><%= page.title %><% }else { %><%= config.description %><% } %>" />
     <title><%= config.title %><% if (page.title){%>: <%= page.title %> <%}%></title>
+    <% const translationEntries = translation_entries(page); %>
+    <% if (translationEntries.length > 1) { %>
+        <% translationEntries.forEach(function (entry) { %>
+            <link rel="alternate" hreflang="<%= entry.lang %>" href="<%= entry.abs %>">
+        <% }) %>
+        <% const defaultEntry = translationEntries.find(function (entry) { return entry.isDefault; }) || translationEntries[0]; %>
+        <link rel="alternate" hreflang="x-default" href="<%= defaultEntry.abs %>">
+    <% } %>
     <!-- favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <%- css('css/style.css') %>
