--- a/themes/autumn/source/css/style.styl
+++ b/themes/autumn/source/css/style.styl
@@ -2,6 +2,7 @@
 @import "_partial/header"
 @import "_partial/post"
 @import "_widget/aside"
+// Keep this entry file touched when partial styles change to ensure recompilation in CI/deploy.
 
 // CSS Variables for theming
 :root
