--- a/themes/autumn/layout/_widget/archive.ejs
+++ b/themes/autumn/layout/_widget/archive.ejs
@@ -1,5 +1,5 @@
 <% if (theme.widgets.archive) { %>
     <h2>Archives</h2>
 
-    <%- list_archives({type:"yearly", format: "YYYY", show_count: true}) %>
+    <%- list_archives_i18n({type:"yearly", format: "YYYY", show_count: true}) %>
 <% } %>
