--- a/themes/autumn/layout/_widget/tag.ejs
+++ b/themes/autumn/layout/_widget/tag.ejs
@@ -1,7 +1,7 @@
 <% if (theme.widgets.tag) { %>
     <h2>Tags</h2>
 
-    <%- list_tags({
+    <%- list_tags_i18n({
         show_count: false,
         transform(str) {
             return str.toLowerCase();
