translation for autobiography

--- a/themes/autumn/layout/post.ejs
+++ b/themes/autumn/layout/post.ejs
@@ -31,7 +31,7 @@
                 <% if (idx < translationEntries.length - 1) { %>,<% } %>
             <% }) %>
             <span class="post-languages-note">
-                (original <%= page.lang || (Array.isArray(config.language) ? config.language[0] : config.language) %>, translation powered by AI)
+                (original ZH, translation powered by AI)
             </span>
         </li>
         <% } %>
